@@ -102,13 +102,25 @@ Linux/Windows
 Apache 1.3.x/2.0.x
 php/mod_php 4.3.x/5.0.x
 
+------------------------------------
+-- P4A compatibility: Client Side --
+------------------------------------
+
+P4A works with all browsers that supports XHTML
+and JavaScript (the main script is so simple
+that there should not be problems with no browser.
+
+The default theme instead uses CSS2 and some
+more complex Javascript, so here you have the
+tested browsers:
+
 -----------------------------------------
 -- P4A compatibility: Workstation Side --
 -----------------------------------------
 
 Tested browsers:
 - Mozilla Firefox 1.x
-- Internet Explorer 5.x, 6.x
+- Internet Explorer 5.5, 6.0
 - Konqueror 3.x
 - Opera 7.x 8.x
 
